--- a/css/my_css/_mixins.scss
+++ b/css/my_css/_mixins.scss
@@ -1,13 +1,119 @@
+$black: #000000;
+$white: #FFFFFF;
+$grey: #1F1F1F;
+$dark-grey: #474747;
+$blue: #1F73C3;
+$light-blue: #95C3EE;
+
 %flexbox
 {
         display: flex;
         flex-wrap: wrap;
         flex-direction: row;
+
         align-items: center;
         align-self: center;
         align-content: center;
         justify-content: center;
+
         width: 100%;
+
         margin: 0px;
         padding: 0px;
+}
+
+%button-dark,
+%button-light
+{
+        min-width: 80px;
+        width: 30%;
+        height: 32px;
+
+        border-radius: 64px;
+        border: none;
+
+        font-size: 18px;
+        text-decoration: none;
+
+        background-color: $dark-grey;
+        color: $white;
+
+        //background: rgb(187,187,187);
+        //background: linear-gradient(325deg, rgba(187,187,187,1) 0%, rgba(255,255,255,1) 100%);
+
+        cursor: pointer;
+        transition: 100ms all;
+}
+
+%button-light
+{
+        background-color: $white;
+        color: $grey;
+}
+
+%button-dark-hover,
+%button-light-hover
+{
+        background-color: $blue;
+        color: $white;
+
+        box-shadow: 0px 4px 4px 0px rgba(255,255,255,0.7);
+        transition: 50ms all;
+}
+
+%button-dark-active,
+%button-light-active
+{
+        background-color: $light-blue;
+        color: $black;
+
+        box-shadow: 0px 0px 0px 0px rgba(255,255,255,0.7);
+}
+
+%color-btn-dark,
+%color-btn-light
+{
+        align-items: center;
+
+        min-width: 36px;
+        min-height: 36px;
+
+        padding-left: 4px;
+        padding-right: 4px;
+
+        border-radius: 64px;
+        border: none;
+
+        background-color: $dark-grey;
+        color: $white;
+
+        cursor: pointer;
+        transition: 100ms all;
+
+        i
+        {
+                font-size: 20px;
+        }
+}
+
+%color-btn-light
+{
+        background-color: $white;
+        color: $grey;
+}
+
+%color-btn-dark-hover,
+%color-btn-light-hover
+{
+        background-color: $blue;
+        color: $white;
+
+        transition: 50ms all;
+}
+
+%color-btn-dark-active,
+%color-btn-light-active
+{
+        background-color: $light-blue;
+        color: $black;
 }
